final changes made

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -81,13 +81,13 @@
             <div class="col-md-6 content-section">
                 <div class="content-box" data-aos="fade-right">
                     <h2>Innovating the Future of Energy Operations</h2>
-                    <p>Samdus Oil & Gas is at the forefront of industry transformation, leveraging advanced technologies to streamline operations and enhance efficiency. Our commitment to operational excellence integrates real-time data analytics, predictive maintenance, and the latest drilling technologies, reducing downtime and maximizing output across all phases of energy production.</p>
+                    <p>Samdus Oil & Gas is at the forefront of industry transformation, leveraging advanced technologies to streamline operations and enhance efficiency. Our commitment to operational excellence integrates real-time data analytics, predictive maintenance, and the latest technologies, reducing downtime and maximizing output across all phases of energy production.</p>
                     <ul class="benefits-list">
                         <li><i class="fas fa-check-circle"></i> AI-Driven Predictive Maintenance for Maximum Uptime</li>
                         <li><i class="fas fa-check-circle"></i> Real-Time Monitoring for Optimized Safety and Performance</li>
                         <li><i class="fas fa-check-circle"></i> Renewable Energy Integration for a Sustainable Future</li>
                     </ul>
-                    <a href="productoverview.html" class="btn mt-4">Discover Our Services</a>
+                    <a href="productoverview.html" class="btn mt-4">Discover Our Solutions</a>
                 </div>
             </div>
             <div class="col-md-6 image-grid">
@@ -127,8 +127,8 @@
             </div>
             <div class="col-md-6 image-grid">
                 <div class="image-card" data-aos="zoom-in">
-                    <img src="static/images/10.jpg" alt="Sustainable Energy" class="img-fluid rounded">
-                    <div class="image-overlay">
+                    <img src="static/glob.jpg" alt="Sustainable Energy" class="img-fluid rounded" loading="lazy">
+                    <div class="image-overlay" >
                         <p class="image-caption">Innovating for a Greener Future</p>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="image-card" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="static/images/oilvacuumsystem.jpg" alt="Community Protection" class="img-fluid rounded">
+                    <img src="static/row_tanks.jpg" alt="Community Protection" class="img-fluid rounded">
                     <div class="image-overlay">
                         <p class="image-caption">Protecting Our Communities</p>
                     </div>
