--- a/ancillaries.html
+++ b/ancillaries.html
@@ -135,7 +135,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="image-item fade-in">
                         <img src="static/images/desmi-deck-spill-kit.webp" alt="OPA90 Deck Spill Kit" class="hover-zoom">
-                        <p class="image-caption">OPA90 Deck Spill Kit - Essential for rapid response to spill incidents on deck.</p>
+                        <p class="image-caption">Spill Kit - Essential for rapid response to spill incidents on deck.</p>
                     </div>
                 </div>
 
@@ -227,7 +227,7 @@
                         <p class="image-caption">Slickgone NS Type 3 Dispersant - Effective and low-toxicity solution for various oil types.</p>
                     </div>
                     <div class="content-text slide-up">
-                        <h2>Dispersant - Slickgone NS Type 3</h2>
+                        <h2>Dispersant</h2>
                         <p>Our Slickgone NS Type 3 Dispersant is a highly effective and environmentally friendly solution, approved by numerous international organizations for use on a wide range of oil types, including those with high wax content. This low-toxicity dispersant can be combined with our Wide Spray Dispersant System to create a comprehensive shipboard dispersant solution, ensuring optimal oil dispersion and minimal environmental impact.</p>
                     </div>
                 </div>
