--- a/consultancy.html
+++ b/consultancy.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
