--- a/equipementhire.html
+++ b/equipementhire.html
@@ -307,7 +307,7 @@ body {
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -348,7 +348,7 @@ body {
             <div class="col-md-6 d-flex align-items-stretch mb-4">
                 <div class="card category-card shadow-sm">
                     <a href="oilskimmers.html">
-                        <img src="static/images/oil-skimmer-desmi.webp" class="card-img-top" alt="Oil Skimmers">
+                        <img src="static/equip.jpg" class="card-img-top" alt="Oil Skimmers">
                     </a>
                     <div class="card-body">
                         <h3 class="card-title text-center">Oil Skimmers</h3>
@@ -361,7 +361,7 @@ body {
             <div class="col-md-6 d-flex align-items-stretch mb-4">
                 <div class="card category-card shadow-sm">
                     <a href="oilsboom.html">
-                        <img src="static/images/oilboom.jpg" class="card-img-top" alt="Containment Booms">
+                        <img src="static/desmi_boom.jpg" class="card-img-top" alt="Containment Booms">
                     </a>
                     <div class="card-body">
                         <h3 class="card-title text-center">Containment Booms</h3>
@@ -377,7 +377,7 @@ body {
                         <img src="static/images/desmi-power-pack.webp" class="card-img-top" alt="Power Packs">
                     </a>
                     <div class="card-body">
-                        <h3 class="card-title text-center">Portable Power Packs</h3>
+                        <h3 class="card-title text-center">Power Packs</h3>
                         <p class="card-text">Portable, compact, and powerful, our power packs provide the necessary energy for remote operations and oil spill recovery efforts.</p>
                     </div>
                 </div>
@@ -387,7 +387,7 @@ body {
             <div class="col-md-6 d-flex align-items-stretch mb-4">
                 <div class="card category-card shadow-sm">
                     <a href="vacuumsystem.html">
-                        <img src="static/images/oilvacuumsystem.jpg" class="card-img-top" alt="Vacuum Systems">
+                        <img src="static/tanks_2.jpg" class="card-img-top" alt="Vacuum Systems">
                     </a>
                     <div class="card-body">
                         <h3 class="card-title text-center">Vacuum Systems</h3>
