--- a/oilsboom.html
+++ b/oilsboom.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="products.css">
 </head>
 <body>
-    <!-- Navbar --> <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <!-- Navbar --> 
         
    
         <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="productoverview.html">Equipments</a>
+                            <a class="nav-link" href="productoverview.html">Equipment</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -82,7 +82,7 @@
                         <p>At Samdus, we offer state-of-the-art oil containment booms designed to effectively contain and control oil spills in various marine environments. Our booms are built using high-quality materials, ensuring durability, buoyancy, and resistance to harsh environmental conditions. Whether deployed in calm waters or challenging open seas, our containment booms provide an essential barrier to prevent the spread of oil, facilitating efficient recovery operations.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/images/oilboom.jpg" alt="Oil Containment Booms" class="hover-zoom">
+                        <img src="static/booms.jpg" alt="Oil Containment Booms" class="hover-zoom">
                         <p class="image-caption">Oil Containment Booms - Crucial for controlling and containing oil spills in diverse marine conditions.</p>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <p>Invest in the future of environmental protection with Samdus. Our commitment to innovation, quality, and sustainability positions us as a leader in the oil spill containment industry. Partner with us to leverage cutting-edge containment solutions that ensure safety, compliance, and environmental stewardship.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/images/desmi-belt-skimmer_2.webp" alt="Containment Solutions" class="hover-zoom">
+                        <img src="static/powerpack.jpg" alt="Containment Solutions" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Containment Solutions - Innovative technologies for comprehensive oil spill response.</p>
                     </div>
                 </div>
