--- a/operationexe.html
+++ b/operationexe.html
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-6 image-grid">
                     <div class="image-card" data-aos="zoom-in">
-                        <img src="static/images/3.jpg" alt="Oil Pump" class="img-fluid rounded">
+                        <img src="static/mach.jpg" alt="Oil Pump" class="img-fluid rounded">
                         <div class="image-overlay">
                             <p class="image-caption">Innovative Oil Pump Technology</p>
                         </div>
