--- a/personnelsupp.html
+++ b/personnelsupp.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="image-row">
                         <div class="image-medium fade-in">
-                            <img src="static/images/oil-and-gas-job-1.jpg" alt="Rapid Response Team" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/boat.jpg" alt="Rapid Response Team" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                         <div class="image-small fade-in">
                             <img src="static/images/Nigeria-crude-oil-2.webp" alt="Environmental Management" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
@@ -157,7 +157,7 @@
                 <!-- Service 1: Oil Spill Response Personnel -->
                 <div class="col-md-4 text-center fade-in">
                     <div class="service-card p-4 shadow-sm">
-                        <img src="static/images/Nigeria-crude-oil-2.webp" alt="Oil Spill Response Personnel" class="img-fluid mb-4 rounded">
+                        <img src="static/work.jpg" alt="Oil Spill Response Personnel" class="img-fluid mb-4 rounded">
                         <h3 class="mb-3">Oil Spill Response Personnel</h3>
                         <p>Highly trained and experienced response teams capable of rapid deployment for effective containment and recovery operations.</p>
                     </div>
@@ -165,7 +165,7 @@
                 <!-- Service 2: Environmental Monitoring -->
                 <div class="col-md-4 text-center fade-in">
                     <div class="service-card p-4 shadow-sm">
-                        <img src="static/images/oil-and-gas-job-1.jpg" alt="Environmental Monitoring" class="img-fluid mb-4 rounded">
+                        <img src="static/green.jpg" alt="Environmental Monitoring" class="img-fluid mb-4 rounded">
                         <h3 class="mb-3">Environmental Monitoring</h3>
                         <p>Our environmental scientists provide on-site monitoring services to assess the ecological impact of spills and ensure regulatory compliance.</p>
                     </div>
@@ -173,7 +173,7 @@
                 <!-- Service 3: Health & Safety Officers -->
                 <div class="col-md-4 text-center fade-in">
                     <div class="service-card p-4 shadow-sm">
-                        <img src="static/images//responseteam.jpg" alt="Health & Safety Officers" class="img-fluid mb-4 rounded">
+                        <img src="static/worker.jpg" alt="Health & Safety Officers" class="img-fluid mb-4 rounded">
                         <h3 class="mb-3">Health & Safety Officers</h3>
                         <p>Our certified health and safety officers are available to ensure compliance with HSE regulations, safeguarding your operations and your team.</p>
                     </div>
