--- a/powerpacks.html
+++ b/powerpacks.html
@@ -225,7 +225,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -310,7 +310,7 @@
                     <p>Our Powerpacks are not just products; they are integral components of a strategic approach to energy management and environmental stewardship. With a strong track record in delivering exceptional solutions across diverse sectors, Samdus is poised to lead the way in the future of power technology. Explore the opportunities with us and be part of a success story built on innovation, resilience, and sustainability.</p>
                 </div>
                 <div class="image-item">
-                    <img src="static/images/powerpack2.jpg" alt="Investor Opportunity" class="hover-zoom">
+                    <img src="static/powerpack.jpg" alt="Investor Opportunity" class="hover-zoom" loading="lazy">
                     <p class="image-caption">Join Us in Building a Sustainable Future with Advanced Power Solutions.</p>
                 </div>
             </div>
