--- a/procurement.html
+++ b/procurement.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -107,7 +107,7 @@
                 <!-- Product 2 -->
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card product-card shadow-sm fade-in">
-                        <img src="static/images/oilpersonnel3.jpg" class="card-img-top" alt="Personal Protective Equipment (PPE)">
+                        <img src="static/protect.jpg" class="card-img-top" alt="Personal Protective Equipment (PPE)">
                         <div class="card-body">
                             <h3 class="card-title">Personal Protective Equipment (PPE)</h3>
                             <p class="card-text">Durable, reliable, and high-quality PPE to safeguard personnel involved in oil spill response operations.</p>
@@ -118,7 +118,7 @@
                 <!-- Product 3 -->
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card product-card shadow-sm fade-in">
-                        <img src="static/images/desmi-widespray.webp" class="card-img-top" alt="Absorbents">
+                        <img src="static/tool.jpg" class="card-img-top" alt="Absorbents">
                         <div class="card-body">
                             <h3 class="card-title">Absorbents</h3>
                             <p class="card-text">Specialized absorbents for containing and cleaning up oil spills efficiently and safely.</p>
