--- a/productoverview.html
+++ b/productoverview.html
@@ -185,7 +185,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -198,7 +198,7 @@
    <!-- Hero Section -->
    <section class="hero-section">
     <div class="hero-content text-center">
-        <h1>Discover Our Cutting-Edge Industrial Solutions</h1>
+        <h1>Discover Our Cutting-Edge Solutions</h1>
         <p>Your trusted partner in innovative technologies and operational excellence.</p>
     </div>
     
@@ -219,14 +219,14 @@
                     <a href="oilsboom.html" class="btn">Learn More</a>
                 </div>
                 <div class="product-image">
-                    <img src="static/images/oilboom.jpg" alt="Oil Containment Booms">
+                    <img src="static/desmi_boom.jpg" alt="Oil Containment Booms">
                 </div>
             </div>
 
             <!-- Oil Skimmers -->
             <div class="product-wrapper fade-in-up">
                 <div class="product-image">
-                    <img src="static/images/oil-skimmer-desmi.webp" alt="Oil Skimmers">
+                    <img src="static/equip.jpg" alt="Oil Skimmers">
                 </div>
                 <div class="product-content">
                     <h2>Oil Skimmers</h2>
@@ -243,7 +243,7 @@
                     <a href="pumps.html" class="btn">Learn More</a>
                 </div>
                 <div class="product-image">
-                    <img src="https://img.freepik.com/free-photo/oil-pumps-work-rhythmically-against-backdrop-dusky-sky_157027-4033.jpg?t=st=1724645650~exp=1724649250~hmac=988911fdc20266edb369759055554ade3fabc5ebcf7d7fce76ae30d6d02833b5&w=1060" alt="Pumps">
+                    <img src="static/gen.jpg" alt="Pumps">
                 </div>
             </div>
 
@@ -267,14 +267,14 @@
                     <a href="tanks.html" class="btn">Learn More</a>
                 </div>
                 <div class="product-image">
-                    <img src="static/images/7.jpg" alt="Tanks">
+                    <img src="static/firsttank.jpg" alt="Tanks" loading="lazy">
                 </div>
             </div>
 
             <!-- Vacuum Systems -->
             <div class="product-wrapper fade-in-up">
                 <div class="product-image">
-                    <img src="https://img.freepik.com/free-photo/steel-pipelines-cables-plant_1359-145.jpg?t=st=1724645560~exp=1724649160~hmac=14e051d15bf61c07e8155fdf9284528300b1ba20137e5ba40e153a4d2f8edb2b&w=740" alt="Vacuum Systems">
+                    <img src="static/tanks_2.jpg" alt="vacuums tanks" loading="lazy">
                 </div>
                 <div class="product-content">
                     <h2>Vacuum Systems</h2>
@@ -291,7 +291,7 @@
                     <a href="ancillaries.html" class="btn">Learn More</a>
                 </div>
                 <div class="product-image">
-                    <img src="static/images/Ancillaries.webp" alt="Ancillaries">
+                    <img src="static/tank8.jpg" alt="Ancillaries">
                 </div>
             </div>
 
