--- a/pumps.html
+++ b/pumps.html
@@ -30,7 +30,7 @@
     <style>
         /* Hero Section */
 .hero-section {
-    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('https://img.freepik.com/free-photo/oil-pumps-work-rhythmically-against-backdrop-dusky-sky_157027-4033.jpg?t=st=1724645650~exp=1724649250~hmac=988911fdc20266edb369759055554ade3fabc5ebcf7d7fce76ae30d6d02833b5&w=1060') no-repeat center center/cover;
+    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('static/des1.jpg') no-repeat center center/cover;
     height: 75vh; /* Increased height */
     display: flex;
     align-items: center;
@@ -104,7 +104,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -136,7 +136,7 @@
                         <p>At Samdus, our pumps are built to meet the demanding conditions of the oil and gas industry. Our advanced designs ensure maximum efficiency, durability, and reliability across a range of applications, from drilling to refinery processes. With a focus on innovation, we deliver pumps that perform exceptionally well under the harshest conditions.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="https://img.freepik.com/free-photo/oil-pumps-work-rhythmically-against-backdrop-dusky-sky_157027-4033.jpg?t=st=1724645650~exp=1724649250~hmac=988911fdc20266edb369759055554ade3fabc5ebcf7d7fce76ae30d6d02833b5&w=1060" alt="Oil Pumps" class="hover-zoom">
+                        <img src="static/des1.jpg" alt="Oil Pumps" class="hover-zoom" loading="lazy" >
                         <p class="image-caption">Oil Pumps - Designed for efficient and reliable operation in various oil and gas applications.</p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                 <!-- Second Row: Image Left, Text Right -->
                 <div class="content-row reverse">
                     <div class="image-item fade-in">
-                        <img src="static/images/3.jpg" alt="Industrial Pumps" class="hover-zoom">
+                        <img src="static/mach.jpg" alt="Industrial Pumps" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Industrial Pumps - Built to withstand extreme environments and ensure continuous operation.</p>
                     </div>
                     <div class="content-text slide-up">
@@ -160,7 +160,7 @@
                         <p>Understanding that each project is unique, Samdus offers customized pump solutions to meet specific client requirements. Our engineering team works closely with you to design and deliver pumps tailored to your operational needs, ensuring maximum efficiency and cost-effectiveness.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/images/4.jpg" alt="Custom Pump Solutions" class="hover-zoom">
+                        <img src="static/des2.jpg" alt="Custom Pump Solutions" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Custom Pump Solutions - Tailored to meet the specific demands of your operation.</p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                 <!-- Fourth Row: Image Left, Text Right -->
                 <div class="content-row reverse">
                     <div class="image-item fade-in">
-                        <img src="static/images/5.jpg" alt="Advanced Pumping Equipment" class="hover-zoom">
+                        <img src="static/images/5.jpg" alt="Advanced Pumping Equipment" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Advanced Pumping Equipment - Engineered for high efficiency and reliability in extreme conditions.</p>
                     </div>
                     <div class="content-text slide-up">
