--- a/respservices.html
+++ b/respservices.html
@@ -233,7 +233,7 @@ body {
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -296,7 +296,7 @@ body {
             <div class="row align-items-center">
                 <!-- Service Detail 3 -->
                 <div class="col-md-6 service-detail fade-in">
-                    <img src="static/images/oil-and-gas-job-1.jpg" alt="Emergency Training" class="img-fluid rounded shadow">
+                    <img src="static/emegprep.jpg" alt="Emergency Training" class="img-fluid rounded shadow" loading="lazy">
                 </div>
                 <div class="col-md-6 service-detail fade-in">
                     <h3>Emergency Preparedness and Training</h3>
