--- a/tanks.html
+++ b/tanks.html
@@ -30,7 +30,7 @@
     <style>
 
 .hero-section {
-    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('static/images/7.jpg  ') no-repeat center center/cover !important;
+    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('static/firsttank.jpg  ') no-repeat center center/cover !important;
     height: 75vh; /* Increased height */
     display: flex;
     align-items: center;
@@ -168,7 +168,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -200,7 +200,7 @@
                         <p>The RO-TANK is a high-quality, durable storage tank available in sizes from 5 to 50m<sup>3</sup>. It is designed for versatile use on land or floating on water (with the addition of an air pillow). The RO-TANK is constructed from robust, reinforced neoprene rubber with a Hypalon outer layer. The Hypalon skin offers high abrasion and puncture resistance, ensuring durability even with prolonged exposure to sunlight and various liquids. The tank lies flat when empty, allowing for compact storage and easy transport, making it ideal for a wide range of operations.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/images/desmi-ro-tanker_2.webp" alt="RO-TANK" class="hover-zoom">
+                        <img src="static/ro-tanks.jpg" alt="RO-TANK" class="hover-zoom">
                         <p class="image-caption">RO-TANK - Versatile storage solution for Oil applications.</p>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                         <p class="image-caption">RO-TANK Cleaning System - Efficient cleaning solutions for maintaining tank integrity.</p>
                     </div>
                     <div class="content-text slide-up">
-                        <h2>RO-TANK Cleaning</h2>
+                        <h2>TANK Cleaning</h2>
                         <p>Introducing a new cleaning system for the RO-TANK, designed for efficient and thorough cleaning without removing the ends. The innovative spray probe can be inserted through a porthole in the tank after partial air inflation and operated with a pressure pump, such as those in the DOP series. This system effectively removes stubborn pollutants and cleans hard-to-reach areas within the tank. The cleaning process is environmentally friendly, preventing any leakage, and drainage can be completed during or after operations through existing connections. This upgradeable system offers a cost-effective solution for maintaining tank cleanliness and integrity.</p>
                     </div>
                 </div>
