--- a/vacuumsystem.html
+++ b/vacuumsystem.html
@@ -114,7 +114,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -178,7 +178,7 @@
                 <!-- RO VAC 4000 -->
                 <div class="content-row reverse">
                     <div class="image-item">
-                        <img src="static/images/oilvacuumsystem.jpg" alt="RO VAC 4000" class="hover-zoom">
+                        <img src="static/powpack.jpg" alt="RO VAC 4000" class="hover-zoom">
                         <p class="image-caption">RO VAC 4000 - Combined vacuum, storage, and transportation system.</p>
                     </div>
                     <div class="content-text">
@@ -189,7 +189,7 @@
 
                 <!-- Additional Section: Investor Insights -->
                 <div class="investor-insights-section">
-                    <h2>Investor Insights: Strategic Advantages of Samdus Vacuum Systems</h2>
+                    <h2>Strategic Advantages of Samdus Vacuum Systems</h2>
                     <p>At Samdus, our vacuum systems are designed with a focus on innovation, efficiency, and sustainability, providing significant advantages to our investors. By offering versatile and durable solutions for oil spill recovery and waste management, we not only meet the immediate needs of environmental protection but also provide long-term value through reduced operational costs and enhanced safety measures. Investing in Samdus' state-of-the-art vacuum systems positions your company at the forefront of environmental responsibility and operational efficiency, ensuring compliance with international standards and regulations while maximizing returns on investment.</p>
                     <p>Our systems are built to adapt to various spill scenarios, making them a reliable choice for oil spill response teams worldwide. With the ability to customize configurations and add advanced accessories, our vacuum systems are tailored to the unique requirements of each client, providing flexibility and scalability in operations. Partner with Samdus to leverage cutting-edge technology that promotes sustainable practices and drives future growth.</p>
                 </div>
