--- a/workboats.html
+++ b/workboats.html
@@ -274,7 +274,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Equipments</a>
+                        <a class="nav-link" href="productoverview.html">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -337,7 +337,7 @@
                 <!-- Aluminium Workboats Section -->
                 <div class="content-row reverse">
                     <div class="image-item fade-in">
-                        <img src="static/images/workboat1.jpg" alt="Aluminium Workboats" class="hover-zoom">
+                        <img src="static/ro-boats.jpg" alt="Aluminium Workboats" class="hover-zoom">
                         <p class="image-caption">Aluminium Workboats - Lightweight and versatile for various operations.</p>
                     </div>
                     <div class="content-text slide-up">
