--- a/terms.html
+++ b/terms.html
@@ -72,7 +72,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#product">Equipments</a>
+                        <a class="nav-link" href="#product">Equipment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
